--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
      <link rel="stylesheet" href="estilo.css">
    </head>
    <body>
-     <h1>Maria Fernanda 1G</h1>
-     <h2>Meu Cachorro</h2>
+     <h1>Maria Fernanda 1G </h1>
+     <h2>meu Cachorrinho</h2>
+     <h3>número 22 </h3>
    </body>
  </html>
