--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
- <!DOCTYPE html>
- <html lang="pt-br" dir="ltr">
-   <head>
-     <meta charset="utf-8">
-     <title>Meu Cachorrinho</title>
-     <link rel="stylesheet" href="estilo.css">
-   </head>
-   <body>
-     <h1>Maria Fernanda 1G </h1>
-     <h2>meu Cachorrinho</h2>
-     <h3>número 22 </h3>
-   </body>
- </html>
+<!DOCTYPE html>
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Os cabeludos</title>
+    <link rel="stylesheet" href="estilo.css">
+  </head>
+  <body>
+    <div class="menuPrincipal">
+      <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="pagina01.html">Página 01</a></li>
+              <li><a href="pagina02.html">Página 02</a></li>
+          </ul>
+      </nav>
+    </div>
+
+    <h1>Página do Jesus</h1>
+    <h2>Turma: 1 G - Número: 99</h2>
+
+    <div class="caixa1">
+       Conteúdo caixa 1
+    </div>
+
+    <div class="caixa2">
+       Conteúdo caixa 1
+    </div>
+
+    <div class="caixa3">
+       Conteúdo caixa 1
+    </div>
+
+  </body>
+</html>
