--- a/pagina01.html
+++ b/pagina01.html
@@ -17,5 +17,9 @@
             </ul>
         </nav>
       </div>
+
+      <div class="caixastrawberry">
+          <img id="morango" src="strawberry.png" alt="">
+      </div>
 </body>
 </html>
