--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </nav>
     </div>
 
-    <h1>Página do Jesus</h1>
-    <h2>Turma: 1 G - Número: 99</h2>
+    <h1>Página da Maria</h1>
+    <h2>Turma: 1 G - Número: 22</h2>
 
     <div class="caixa1">
        Conteúdo caixa 1
