--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </nav>
     </div>
 
-    <h1>Página da Maria</h1>
+    <h1>Página do Jesus</h1>
     <h2>Turma: 1 G - Número: 22</h2>
 
     <div class="caixa1">
@@ -30,6 +30,14 @@
     <div class="caixa3">
        Conteúdo caixa 1
     </div>
+    <div class="conteudo">
+      <h1>gastão vidigal- novo ensino medio</h1>
+      <h2>primeiro g</h2>
 
+      <div>
+    </div class="rodape">
+    Aluno: Maria Fernanda - 22 - primeiro g
+
+    </div>
   </body>
 </html>
