--- a/pagina01.html
+++ b/pagina01.html
@@ -17,9 +17,11 @@
             </ul>
         </nav>
       </div>
-
-      <div class="caixastrawberry">
-          <img id="morango" src="strawberry.png" alt="">
+      
+      <div class="caixaCarro">
+          <img id="carro" src="carro.png" alt="">
       </div>
+
+
 </body>
 </html>
